--- a/dating/index.html
+++ b/dating/index.html
@@ -62,7 +62,7 @@
       <div class="girl__flex">
         <div class="girl__box">
           <a class="girl__link" href="#">
-            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
+            <div class="girl__photo"></div>
           </a>
           <span class="girl__status">Online</span>
           <div class="girl__desc">
@@ -79,7 +79,7 @@
         </div>
         <div class="girl__box">
           <a class="girl__link" href="#">
-            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
+            <div class="girl__photo"></div>
           </a>
           <span class="girl__status">Online</span>
           <div class="girl__desc">
@@ -96,7 +96,7 @@
         </div>
         <div class="girl__box">
           <a class="girl__link" href="#">
-            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
+            <div class="girl__photo"></div>
           </a>
           <span class="girl__status">Online</span>
           <div class="girl__desc">
@@ -113,7 +113,7 @@
         </div>
         <div class="girl__box">
           <a class="girl__link" href="#">
-            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
+            <div class="girl__photo"></div>
           </a>
           <span class="girl__status">Online</span>
           <div class="girl__desc">
@@ -130,7 +130,7 @@
         </div>
         <div class="girl__box">
           <a class="girl__link" href="#">
-            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
+            <div class="girl__photo"></div>
           </a>
           <span class="girl__status">Online</span>
           <div class="girl__desc">
@@ -147,7 +147,7 @@
         </div>
         <div class="girl__box">
           <a class="girl__link" href="#">
-            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
+            <div class="girl__photo"></div>
           </a>
           <span class="girl__status">Online</span>
           <div class="girl__desc">
@@ -164,7 +164,7 @@
         </div>
         <div class="girl__box">
           <a class="girl__link" href="#">
-            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
+            <div class="girl__photo"></div>
           </a>
           <span class="girl__status">Online</span>
           <div class="girl__desc">
@@ -181,7 +181,7 @@
         </div>
         <div class="girl__box">
           <a class="girl__link" href="#">
-            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
+            <div class="girl__photo"></div>
           </a>
           <span class="girl__status">Online</span>
           <div class="girl__desc">
@@ -198,7 +198,7 @@
         </div>
         <div class="girl__box">
           <a class="girl__link" href="#">
-            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
+            <div class="girl__photo"></div>
           </a>
           <span class="girl__status">Online</span>
           <div class="girl__desc">
@@ -215,7 +215,7 @@
         </div>
         <div class="girl__box">
           <a class="girl__link" href="#">
-            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
+            <div class="girl__photo"></div>
           </a>
           <span class="girl__status">Online</span>
           <div class="girl__desc">
@@ -232,7 +232,7 @@
         </div>
         <div class="girl__box">
           <a class="girl__link" href="#">
-            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
+            <div class="girl__photo"></div>
           </a>
           <span class="girl__status">Online</span>
           <div class="girl__desc">
@@ -249,7 +249,7 @@
         </div>
         <div class="girl__box">
           <a class="girl__link" href="#">
-            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
+            <div class="girl__photo"></div>
           </a>
           <span class="girl__status">Online</span>
           <div class="girl__desc">
@@ -266,7 +266,7 @@
         </div>
         <div class="girl__box">
           <a class="girl__link" href="#">
-            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
+            <div class="girl__photo"></div>
           </a>
           <span class="girl__status">Online</span>
           <div class="girl__desc">
@@ -283,7 +283,7 @@
         </div>
         <div class="girl__box">
           <a class="girl__link" href="#">
-            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
+            <div class="girl__photo"></div>
           </a>
           <span class="girl__status">Online</span>
           <div class="girl__desc">
@@ -300,7 +300,7 @@
         </div>
         <div class="girl__box">
           <a class="girl__link" href="#">
-            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
+            <div class="girl__photo"></div>
           </a>
           <span class="girl__status">Online</span>
           <div class="girl__desc">
@@ -317,7 +317,7 @@
         </div>
         <div class="girl__box">
           <a class="girl__link" href="#">
-            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
+            <div class="girl__photo"></div>
           </a>
           <span class="girl__status">Online</span>
           <div class="girl__desc">
@@ -473,8 +473,8 @@
   <footer class="footer">
     <div class="container">
       <div class="footer__flex">
-        <a class="nav__logo" href="#">
-          <img src="img/logo.png" alt="Dating with Stas">
+        <a class="nav__logo  nav__logo--footer" href="#">
+          <img src="img/logo-color.png" alt="Dating with Stas">
           <p class="nav__text">Dating</p>
         </a>
         <ul class="footer__list">
