--- a/dating/registration.html
+++ b/dating/registration.html
@@ -154,7 +154,12 @@
             <p class="form__another  form__another--notline">or</p>
             <a class="form__signin" href="#">Sign In</a>
           </div>  
-          
+          <div class="form__agree">
+            <label>
+              
+              <input type="checkbox">
+            </label>
+          </div>
         </form>
       </div>
     </div>
