--- a/market/index.html
+++ b/market/index.html
@@ -36,7 +36,7 @@
       </ul>
 
       <div class="hero__container-button">
-        <button class="button">More Info</button>
+        <button class="button  modal__button">More Info</button>
       </div>
 
     </div>
@@ -357,7 +357,23 @@
       </div>
     </footer>
   </main>
-
+  
+  <div class="modal  modal--inactive">
+    <button class="modal__close" type="button">Close</button>
+    <form class="modal__form" action="" method="post">
+      <h3 class="modal__name">Get more info</h3>
+      <input class="modal__input  modal__input--register" type="email" name="Email" placeholder="Email">
+      <textarea class="modal__textarea" name="Message" placeholder="Message"></textarea>
+      <button class="button  button--small  button--red  modal__submit" type="submit" name="Submit">Send Message</button>
+    </form>
+  </div>
+  
+  <div class="modal__overlay  modal__overlay--inactive"></div>
+  
+  <script src="assets/js/main.js">
+    
+  </script>
+  
 </body>
 
 </html>
