--- a/market/index.html
+++ b/market/index.html
@@ -27,7 +27,7 @@
         <li class="header__menu-item" ss="telegram">
           <a href="javascript:void(0)">Telegram Bot</a>
         </li>
-        <li class="container__list-item">
+        <li class="header__menu-item" ss="instruments">
           <a href="javascript:void(0)">Instruments</a>
         </li>
         <li class="header__menu-item" ss="contact">
@@ -341,16 +341,16 @@
         <img src="uploads/logo-white.svg" alt="">
 
         <ul class="footer__container-list">
-          <li class="container__list-item">
-            <a href="javascript:void(0)">Cases</a>
+          <li class="container__list-item" ss="cases">
+            <a href="javascript:void(0)" >Cases</a>
           </li>
-          <li class="container__list-item">
+          <li class="container__list-item" ss="telegram">
             <a href="javascript:void(0)">Telegram bot</a>
           </li>
-          <li class="container__list-item">
+          <li class="container__list-item" ss="instruments">
             <a href="javascript:void(0)">Instruments</a>
           </li>
-          <li class="container__list-item">
+          <li class="container__list-item" ss="contact">
             <a href="javascript:void(0)">Contact Us</a>
           </li>
         </ul>
