--- a/market/index.html
+++ b/market/index.html
@@ -314,7 +314,7 @@
     <section class="more">
       <div class="wrapper">
         <h2 class="more__title">Want to get more information?</h3>
-        <a class="button  more__button" href="#">Download presentation</a>
+        <a class="button  more__button" href="uploads/Presentation.pdf" target="_blank">Download presentation</a>
       </div>
     </section>
 
