--- a/dating/registration.html
+++ b/dating/registration.html
@@ -22,21 +22,21 @@
   <meta name="theme-color" content="#7480d0">
 </head>
 <body>
-  <main class="main  main--authorization">
-    <header class="header  header--inner">
-      <div class="container">
-        <nav class="nav">
-          <a class="nav__logo" href="#">
-            <picture>
-             <source srcset="img/logo-color.png" media="(min-width: 770px)">
-             <source srcset="img/logo-color.png" media="(max-width: 770px)">
-             <img src="img/logo.png" alt="Dating with Stas">
-            </picture>
-            <p class="nav__text  nav__text--inner">Dating</p>
-          </a>
-        </nav>
-      </div>
-    </header>
+  <header class="header  header--inner">
+    <div class="container">
+      <nav class="nav">
+        <a class="nav__logo" href="#">
+          <picture>
+           <source srcset="img/logo-color.png" media="(min-width: 770px)">
+           <source srcset="img/logo-color.png" media="(max-width: 770px)">
+           <img src="img/logo.png" alt="Dating with Stas">
+          </picture>
+          <p class="nav__text  nav__text--inner">Dating</p>
+        </a>
+      </nav>
+    </div>
+  </header>
+  <main class="main">
     <div class="container">
       <div class="authorization">
         <div class="authorization__left">
@@ -56,79 +56,81 @@
               Last Name:
               <input class="form__input" type="text" name="Last Name">
             </label>
-            <label class="form__label">
+            <label class="form__label  form__label--select">
               Date of Birth:
-              <select class="form__select  form__select--month" name="Month">
-                <option>January</option>
-                <option>February</option>
-                <option>March</option>
-                <option>April</option>
-                <option>May</option>
-                <option>June</option>
-                <option>July</option>
-                <option>August</option>
-                <option>September</option>
-                <option>October</option>
-                <option>November</option>
-                <option>December</option>
-              </select>
-              <select class="form__select  form__select--day" name="Day">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
-                <option>6</option>
-                <option>7</option>
-                <option>8</option>
-                <option>9</option>
-                <option>10</option>
-                <option>11</option>
-                <option>12</option>
-                <option>13</option>
-                <option>14</option>
-                <option>15</option>
-                <option>16</option>
-                <option>17</option>
-                <option>18</option>
-                <option>19</option>
-                <option>20</option>
-                <option>21</option>
-                <option>22</option>
-                <option>23</option>
-                <option>24</option>
-                <option>25</option>
-                <option>26</option>
-                <option>27</option>
-                <option>28</option>
-                <option>29</option>
-                <option>30</option>
-                <option>31</option>
-              </select>
-              <select class="form__select  form__select--year" name="Year">
-                <option>1980</option>
-                <option>1982</option>
-                <option>1983</option>
-                <option>1984</option>
-                <option>1985</option>
-                <option>1986</option>
-                <option>1987</option>
-                <option>1988</option>
-                <option>1989</option>
-                <option>1990</option>
-                <option>1991</option>
-                <option>1992</option>
-                <option>1993</option>
-                <option>1994</option>
-                <option>1995</option>
-                <option>1996</option>
-                <option>1997</option>
-                <option>1998</option>
-                <option>1999</option>
-                <option>2000</option>
-                <option>2001</option>
-                <option>2002</option>
-              </select>
+              <div class="form__group">
+                <select class="form__select  form__select--month" name="Month">
+                  <option>January</option>
+                  <option>February</option>
+                  <option>March</option>
+                  <option>April</option>
+                  <option>May</option>
+                  <option>June</option>
+                  <option>July</option>
+                  <option>August</option>
+                  <option>September</option>
+                  <option>October</option>
+                  <option>November</option>
+                  <option>December</option>
+                </select>
+                <select class="form__select  form__select--day" name="Day">
+                  <option>1</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5</option>
+                  <option>6</option>
+                  <option>7</option>
+                  <option>8</option>
+                  <option>9</option>
+                  <option>10</option>
+                  <option>11</option>
+                  <option>12</option>
+                  <option>13</option>
+                  <option>14</option>
+                  <option>15</option>
+                  <option>16</option>
+                  <option>17</option>
+                  <option>18</option>
+                  <option>19</option>
+                  <option>20</option>
+                  <option>21</option>
+                  <option>22</option>
+                  <option>23</option>
+                  <option>24</option>
+                  <option>25</option>
+                  <option>26</option>
+                  <option>27</option>
+                  <option>28</option>
+                  <option>29</option>
+                  <option>30</option>
+                  <option>31</option>
+                </select>
+                <select class="form__select  form__select--year" name="Year">
+                  <option>1980</option>
+                  <option>1982</option>
+                  <option>1983</option>
+                  <option>1984</option>
+                  <option>1985</option>
+                  <option>1986</option>
+                  <option>1987</option>
+                  <option>1988</option>
+                  <option>1989</option>
+                  <option>1990</option>
+                  <option>1991</option>
+                  <option>1992</option>
+                  <option>1993</option>
+                  <option>1994</option>
+                  <option>1995</option>
+                  <option>1996</option>
+                  <option>1997</option>
+                  <option>1998</option>
+                  <option>1999</option>
+                  <option>2000</option>
+                  <option>2001</option>
+                  <option>2002</option>
+                </select>
+              </div>
             </label>
             <label class="form__label">
               Contry:
@@ -154,10 +156,10 @@
             <p class="form__another  form__another--notline">or</p>
             <a class="form__signin" href="#">Sign In</a>
           </div>  
-          <div class="form__agree">
-            <label>
-              
-              <input type="checkbox">
+          <div class="form__another">
+            <label class="form__agree">
+              <input class="form__checkbox" type="checkbox">
+              I agree with <a class="form__terms" href="#">terms of use</a>
             </label>
           </div>
         </form>
