--- a/dating/view_profile.html
+++ b/dating/view_profile.html
@@ -78,7 +78,10 @@
               <ul class="profile__img-settings">
                 <li><button class="profile__img-button  profile__img-button--download"></button></li>
                 <li><button class="profile__img-button  profile__img-button--upload"></button></li>
-                <li><button class="profile__img-button  profile__img-button--crop"></button></li>
+                <li>
+                  <button class="profile__img-button  profile__img-button--crop"></button>
+                  <button class="profile__img-title">Crop profile photo</button>
+                </li>
               </ul>
             </div>
             <div class="profile__info">
