--- a/dating/favorites.html
+++ b/dating/favorites.html
@@ -81,114 +81,92 @@
               <div class="girl__desc">
                 <b class="girl__name  girl__name--inner">Viviana, 37</b>
                 <p class="girl__country  girl__country--inner">Bogota, Colombia</p>
-                <div class="girl__links  girl__links--inner">
-                  <a class="girl__control  girl__control--gift" href="#">Gift</a>
-                  <a class="girl__control  girl__control--favorite" href="#">Favorite</a>
-                  <a class="girl__control  girl__control--message" href="#">Message</a>
-                  <a class="girl__control  girl__control--chat" href="#">Chat</a>
+                <div class="girl__buttons">
+                  <a class="girl__button  girl__button--chat" href="#">Chat</a>
+                  <a class="girl__button  girl__button--message" href="#">Message</a>
+                  <a class="girl__button  girl__button--gift" href="#">Gift</a>
+                  <a class="girl__button  girl__button--favorite" href="#">Favorite</a>
                 </div>
               </div>
             </div>
             <div class="girl__box  girl__box--inner">
               <a class="girl__link" href="#">
-                <div class="girl__photo"></div>
+                <div class="girl__photo  girl__photo--inner"></div>
               </a>
               <span class="girl__status">Online</span>
               <div class="girl__desc">
-                <b class="girl__name">Viviana, 37</b>
-                <p class="girl__country">Bogota, Colombia</p>
-                <div class="girl__links">
-                  <a class="girl__control  girl__control--gift" href="#">Gift</a>
-                  <a class="girl__control  girl__control--favorite" href="#">Favorite</a>
-                  <a class="girl__control  girl__control--message" href="#">Message</a>
-                  <a class="girl__control  girl__control--chat" href="#">Chat</a>
+                <b class="girl__name  girl__name--inner">Viviana, 37</b>
+                <p class="girl__country  girl__country--inner">Bogota, Colombia</p>
+                <div class="girl__buttons">
+                  <a class="girl__button  girl__button--chat" href="#">Chat</a>
+                  <a class="girl__button  girl__button--message" href="#">Message</a>
+                  <a class="girl__button  girl__button--gift" href="#">Gift</a>
+                  <a class="girl__button  girl__button--favorite" href="#">Favorite</a>
                 </div>
-                <a class="girl__contact" href="#">Contact Her</a>
               </div>
             </div>
             <div class="girl__box  girl__box--inner">
               <a class="girl__link" href="#">
-                <div class="girl__photo"></div>
+                <div class="girl__photo  girl__photo--inner"></div>
               </a>
               <span class="girl__status">Online</span>
               <div class="girl__desc">
-                <b class="girl__name">Viviana, 37</b>
-                <p class="girl__country">Bogota, Colombia</p>
-                <div class="girl__links">
-                  <a class="girl__control  girl__control--gift" href="#">Gift</a>
-                  <a class="girl__control  girl__control--favorite" href="#">Favorite</a>
-                  <a class="girl__control  girl__control--message" href="#">Message</a>
-                  <a class="girl__control  girl__control--chat" href="#">Chat</a>
+                <b class="girl__name  girl__name--inner">Viviana, 37</b>
+                <p class="girl__country  girl__country--inner">Bogota, Colombia</p>
+                <div class="girl__buttons">
+                  <a class="girl__button  girl__button--chat" href="#">Chat</a>
+                  <a class="girl__button  girl__button--message" href="#">Message</a>
+                  <a class="girl__button  girl__button--gift" href="#">Gift</a>
+                  <a class="girl__button  girl__button--favorite" href="#">Favorite</a>
                 </div>
-                <a class="girl__contact" href="#">Contact Her</a>
               </div>
             </div>
             <div class="girl__box  girl__box--inner">
               <a class="girl__link" href="#">
-                <div class="girl__photo"></div>
+                <div class="girl__photo  girl__photo--inner"></div>
               </a>
               <span class="girl__status">Online</span>
               <div class="girl__desc">
-                <b class="girl__name">Viviana, 37</b>
-                <p class="girl__country">Bogota, Colombia</p>
-                <div class="girl__links">
-                  <a class="girl__control  girl__control--gift" href="#">Gift</a>
-                  <a class="girl__control  girl__control--favorite" href="#">Favorite</a>
-                  <a class="girl__control  girl__control--message" href="#">Message</a>
-                  <a class="girl__control  girl__control--chat" href="#">Chat</a>
+                <b class="girl__name  girl__name--inner">Viviana, 37</b>
+                <p class="girl__country  girl__country--inner">Bogota, Colombia</p>
+                <div class="girl__buttons">
+                  <a class="girl__button  girl__button--chat" href="#">Chat</a>
+                  <a class="girl__button  girl__button--message" href="#">Message</a>
+                  <a class="girl__button  girl__button--gift" href="#">Gift</a>
+                  <a class="girl__button  girl__button--favorite" href="#">Favorite</a>
                 </div>
-                <a class="girl__contact" href="#">Contact Her</a>
               </div>
             </div>
             <div class="girl__box  girl__box--inner">
               <a class="girl__link" href="#">
-                <div class="girl__photo"></div>
+                <div class="girl__photo  girl__photo--inner"></div>
               </a>
               <span class="girl__status">Online</span>
               <div class="girl__desc">
-                <b class="girl__name">Viviana, 37</b>
-                <p class="girl__country">Bogota, Colombia</p>
-                <div class="girl__links">
-                  <a class="girl__control  girl__control--gift" href="#">Gift</a>
-                  <a class="girl__control  girl__control--favorite" href="#">Favorite</a>
-                  <a class="girl__control  girl__control--message" href="#">Message</a>
-                  <a class="girl__control  girl__control--chat" href="#">Chat</a>
+                <b class="girl__name  girl__name--inner">Viviana, 37</b>
+                <p class="girl__country  girl__country--inner">Bogota, Colombia</p>
+                <div class="girl__buttons">
+                  <a class="girl__button  girl__button--chat" href="#">Chat</a>
+                  <a class="girl__button  girl__button--message" href="#">Message</a>
+                  <a class="girl__button  girl__button--gift" href="#">Gift</a>
+                  <a class="girl__button  girl__button--favorite" href="#">Favorite</a>
                 </div>
-                <a class="girl__contact" href="#">Contact Her</a>
               </div>
             </div>
             <div class="girl__box  girl__box--inner">
               <a class="girl__link" href="#">
-                <div class="girl__photo"></div>
+                <div class="girl__photo  girl__photo--inner"></div>
               </a>
               <span class="girl__status">Online</span>
               <div class="girl__desc">
-                <b class="girl__name">Viviana, 37</b>
-                <p class="girl__country">Bogota, Colombia</p>
-                <div class="girl__links">
-                  <a class="girl__control  girl__control--gift" href="#">Gift</a>
-                  <a class="girl__control  girl__control--favorite" href="#">Favorite</a>
-                  <a class="girl__control  girl__control--message" href="#">Message</a>
-                  <a class="girl__control  girl__control--chat" href="#">Chat</a>
+                <b class="girl__name  girl__name--inner">Viviana, 37</b>
+                <p class="girl__country  girl__country--inner">Bogota, Colombia</p>
+                <div class="girl__buttons">
+                  <a class="girl__button  girl__button--chat" href="#">Chat</a>
+                  <a class="girl__button  girl__button--message" href="#">Message</a>
+                  <a class="girl__button  girl__button--gift" href="#">Gift</a>
+                  <a class="girl__button  girl__button--favorite" href="#">Favorite</a>
                 </div>
-                <a class="girl__contact" href="#">Contact Her</a>
-              </div>
-            </div>
-            <div class="girl__box  girl__box--inner">
-              <a class="girl__link" href="#">
-                <div class="girl__photo"></div>
-              </a>
-              <span class="girl__status">Online</span>
-              <div class="girl__desc">
-                <b class="girl__name">Viviana, 37</b>
-                <p class="girl__country">Bogota, Colombia</p>
-                <div class="girl__links">
-                  <a class="girl__control  girl__control--gift" href="#">Gift</a>
-                  <a class="girl__control  girl__control--favorite" href="#">Favorite</a>
-                  <a class="girl__control  girl__control--message" href="#">Message</a>
-                  <a class="girl__control  girl__control--chat" href="#">Chat</a>
-                </div>
-                <a class="girl__contact" href="#">Contact Her</a>
               </div>
             </div>
           </div>
