--- a/dating/favorites.html
+++ b/dating/favorites.html
@@ -34,6 +34,7 @@
           <p class="nav__text  nav__text--inner">Dating</p>
         </a>
         <div class="nav__search">
+          <svg class="nav__search-icon" xmlns="http://www.w3.org/2000/svg" width="12" height="13" viewBox="0 0 250.313 250.313"><path d="M244.186 214.604l-54.379-54.378c-.289-.289-.628-.491-.93-.76 10.7-16.231 16.945-35.66 16.945-56.554C205.822 46.075 159.747 0 102.911 0S0 46.075 0 102.911c0 56.835 46.074 102.911 102.91 102.911 20.895 0 40.323-6.245 56.554-16.945.269.301.47.64.759.929l54.38 54.38c8.169 8.168 21.413 8.168 29.583 0 8.168-8.169 8.168-21.413 0-29.582zm-141.275-44.458c-37.134 0-67.236-30.102-67.236-67.235 0-37.134 30.103-67.236 67.236-67.236 37.132 0 67.235 30.103 67.235 67.236s-30.103 67.235-67.235 67.235z" fill-rule="evenodd" clip-rule="evenodd"/></svg>
           <input class="nav__input" type="search" placeholder="Search ladies">
           <button class="nav__submit">Search</button>
         </div>
@@ -91,6 +92,7 @@
           </ul>
         </div>
         <div class="girl  girl--inner">
+          <h1 class="main__title">Favorites</h1>
           <div class="girl__flex">
             <div class="girl__box  girl__box--inner">
               <a class="girl__link" href="#">
