--- a/dating/favorites.html
+++ b/dating/favorites.html
@@ -154,14 +154,14 @@
                 <button class="profile__tab" onclick="openTab(event, 'Bonus')">Bonus</button>
                 <button class="profile__tab" onclick="openTab(event, 'History')">History</button>
               </li>
-              <li class="profile__balance  profile__content" id="Balance">
+              <li class="profile__balance  profile__content" id="Balance" style="display: flex;">
                 <div class="profile__balance-content">
                   <p class="profile__balance-text">Your balance</p>
                   <b class="profile__balance-counter"><span>213</span><br>credits</b>
                   <a class="button  button--small  button--violet  profile__balance-button" href="#">+ Add credits</a>
                 </div>
               </li>
-              <li class="profile__prices  profile__content" id="Prices">
+              <li class="profile__prices  profile__content" id="Prices" style="display: none;">
                 <table class="profile__table  profile__table--price">
                   <tr class="profile__table-tr">
                     <th class="profile__table-th">Service</th>
