--- a/dating/favorites.html
+++ b/dating/favorites.html
@@ -159,6 +159,10 @@
                   <p class="profile__balance-text">Your balance</p>
                   <b class="profile__balance-counter"><span>213</span><br>credits</b>
                   <a class="button  button--small  button--violet  profile__balance-button" href="#">+ Add credits</a>
+                  <div class="profile__popup">
+                    <b class="profile__popup-name">Select the amount<br>of credits from the list</b>
+                    
+                  </div>
                 </div>
               </li>
               <li class="profile__prices  profile__content" id="Prices" style="display: none;">
@@ -231,6 +235,39 @@
                 </table>
                 <p class="profile__table-alert">* equivalent 1% = 4 credits</p>
               </li>
+              <li class="profile__bonus  profile__content" id="Bonus" style="display: none;">
+                <table class="profile__table  profile__table--price">
+                  <tr class="profile__table-tr">
+                    <th class="profile__table-th">Do it</th>
+                    <th class="profile__table-th">Get it</th> 
+                  </tr>
+                  <tr class="profile__table-tr">
+                    <td class="profile__table-td">Read 50 incoming</td>
+                    <td class="profile__table-td">5 Credits</td> 
+                  </tr>
+                  <tr class="profile__table-tr">
+                    <td class="profile__table-td">Die 5 times</td>
+                    <td class="profile__table-td">5 Credits</td> 
+                  </tr>
+                  <tr class="profile__table-tr">
+                    <td class="profile__table-td">Read 100 incoming</td>
+                    <td class="profile__table-td">0,5 Credits</td> 
+                  </tr>
+                  <tr class="profile__table-tr">
+                    <td class="profile__table-td">Die 10 times</td>
+                    <td class="profile__table-td">1,5 Credits</td> 
+                  </tr>
+                  <tr class="profile__table-tr">
+                    <td class="profile__table-td">Read 200 incoming</td>
+                    <td class="profile__table-td">1 Credits</td> 
+                  </tr>
+                  <tr class="profile__table-tr">
+                    <td class="profile__table-td">Die 20 times</td>
+                    <td class="profile__table-td">5 Credits</td> 
+                  </tr>
+                </table>
+                <p class="profile__table-alert">* equivalent 1% = 4 credits</p>
+              </li>
             </ul>
           </li>
           <li>
@@ -238,10 +275,39 @@
               Notification
               <svg class="nav__button-icon" xmlns="http://www.w3.org/2000/svg" width="25" height="30" viewBox="0 0 510 510"><path d="M255 510c28.05 0 51-22.95 51-51H204c0 28.05 22.95 51 51 51zm165.75-153V216.75c0-79.05-53.55-142.8-127.5-160.65V38.25C293.25 17.85 275.4 0 255 0s-38.25 17.85-38.25 38.25V56.1c-73.95 17.85-127.5 81.6-127.5 160.65V357l-51 51v25.5h433.5V408l-51-51z"/></svg>
             </button>
-            <ul class="profile__list  profile__list--mobile  profile__list--inactive">
-              <li>
-                <a href="#" class="profile__item  profile__item--new  profile__item--mobile">New ladies</a>
-                <svg class="profile__icon" xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 561 561"><path d="M357 280.5c56.1 0 102-45.9 102-102s-45.9-102-102-102-102 45.9-102 102 45.9 102 102 102zm-229.5-51V153h-51v76.5H0v51h76.5V357h51v-76.5H204v-51h-76.5zm229.5 102c-68.85 0-204 33.15-204 102v51h408v-51c0-68.85-135.15-102-204-102z"/></svg>
+            <ul class="profile__list  profile__list--mobile  profile__list--full  profile__list--inactive">
+              <li class="profile__history ">
+                <table class="profile__table  profile__table--price">
+                  <tr class="profile__table-tr">
+                    <th class="profile__table-th">Do it</th>
+                    <th class="profile__table-th">Get it</th> 
+                  </tr>
+                  <tr class="profile__table-tr">
+                    <td class="profile__table-td">Read 50 incoming</td>
+                    <td class="profile__table-td">5 Credits</td> 
+                  </tr>
+                  <tr class="profile__table-tr">
+                    <td class="profile__table-td">Die 5 times</td>
+                    <td class="profile__table-td">5 Credits</td> 
+                  </tr>
+                  <tr class="profile__table-tr">
+                    <td class="profile__table-td">Read 100 incoming</td>
+                    <td class="profile__table-td">0,5 Credits</td> 
+                  </tr>
+                  <tr class="profile__table-tr">
+                    <td class="profile__table-td">Die 10 times</td>
+                    <td class="profile__table-td">1,5 Credits</td> 
+                  </tr>
+                  <tr class="profile__table-tr">
+                    <td class="profile__table-td">Read 200 incoming</td>
+                    <td class="profile__table-td">1 Credits</td> 
+                  </tr>
+                  <tr class="profile__table-tr">
+                    <td class="profile__table-td">Die 20 times</td>
+                    <td class="profile__table-td">5 Credits</td> 
+                  </tr>
+                </table>
+                <p class="profile__table-alert">* equivalent 1% = 4 credits</p>
               </li>
             </ul>
           </li>
