--- a/dating/favorites.html
+++ b/dating/favorites.html
@@ -40,7 +40,7 @@
         </div>
         <div class="nav__credits">
           <p class="nav__counter">Your balance:<b class="nav__number"> 213 credits</b></p>
-          <a class="button  button--small  button--violet" href="#">+ Add credits</a>
+          <a class="button  button--small  button--violet  popup__add--desktop" href="#">+ Add credits</a>
         </div>
       </nav>
       <nav class="nav__mobile">
@@ -158,7 +158,7 @@
                 <div class="profile__balance-content">
                   <p class="profile__balance-text">Your balance</p>
                   <b class="profile__balance-counter"><span>213</span><br>credits</b>
-                  <a class="button  button--small  button--violet  profile__balance-button" href="#">+ Add credits</a>
+                  <a class="button  button--small  button--violet  profile__balance-button  popup__add--mobile" href="#">+ Add credits</a>
                   <!-- <div class="profile__popup  profile__popup--inactive">
                     <button class="profile__popup-close" type="button">
                       Close
@@ -615,7 +615,7 @@
     </label>
   </div>
   <div class="popup  popup__overlay  popup__overlay--inactive"></div>
-  <script src="js/script.js"></script>
+  <!-- <script src="js/script.js"></script> -->
   <script src="js/main.min.js" async></script>
 </body>
 </html>
