--- a/dating/index.html
+++ b/dating/index.html
@@ -735,6 +735,7 @@
       <p class="footer__copyright">© Dating 2018. All rights reserved.</p>
     </div>
   </footer>
+  <script src="js/main.min.js"></script>
   <script src="js/jquery-3.2.0.min.js"></script>
   <script src="slick/slick.js"></script>
   <script src="js/script.js"></script>
