--- a/dating/view_profile.html
+++ b/dating/view_profile.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="js/slick/slick.min.css">
   <link rel="stylesheet" href="js/slick/slick-theme.css">
 </head>
-<body>
+<body class="body  body--inner">
   <header class="header  header--inner">
     <div class="container">
       <nav class="nav  nav--inner">
@@ -477,8 +477,12 @@
                   <svg class="profile__drop-icon" xmlns="http://www.w3.org/2000/svg" width="13" height="16" viewBox="0 0 60 60"><path d="M36.491 22h-25a1 1 0 1 0 0 2h25a1 1 0 1 0 0-2zM11.491 16h10a1 1 0 1 0 0-2h-10a1 1 0 1 0 0 2zM37.491 31a1 1 0 0 0-1-1h-25a1 1 0 1 0 0 2h25a1 1 0 0 0 1-1zM29.491 39a1 1 0 0 0-1-1h-17a1 1 0 1 0 0 2h17a1 1 0 0 0 1-1zM11.491 46a1 1 0 1 0 0 2h14a1 1 0 1 0 0-2h-14z"/><path d="M2.491 2h29v14h14v15h2V14.586L32.905 0H.491v60h37v-2h-35V2zm31 1.414L44.077 14H33.491V3.414z"/><path d="M59.232 58.291l-5.97-6.244a10.74 10.74 0 0 0 2.82-7.251C56.083 38.843 51.24 34 45.287 34s-10.796 4.843-10.796 10.796 4.843 10.796 10.796 10.796c2.442 0 4.689-.824 6.499-2.196l6.001 6.276a.997.997 0 0 0 1.414.032 1 1 0 0 0 .031-1.413zM36.491 44.796c0-4.85 3.946-8.796 8.796-8.796s8.796 3.946 8.796 8.796-3.946 8.796-8.796 8.796-8.796-3.946-8.796-8.796z"/></svg>
                   Drag files here
                 </div>
-                <p class="profile__name">or click</p>
-                <input class="profile__input" type="text">
+                <p class="profile__name  profile__name--small">or click</p>
+                <input class="profile__file" id="file" type="file" name="file">
+                <label class="button  button--small  button--violet  profile__file-label" for="file">
+                  <svg class="profile__file-icon" xmlns="http://www.w3.org/2000/svg" width="11" height="12" viewBox="0 0 444.819 444.819"><path fill="#FFF" d="M434.252 208.708L248.387 22.843c-7.042-7.043-15.693-10.564-25.977-10.564-10.467 0-19.036 3.521-25.697 10.564L10.848 208.708C3.615 215.94 0 224.604 0 234.692c0 9.897 3.619 18.459 10.848 25.693l21.411 21.409c6.854 7.231 15.42 10.855 25.697 10.855 10.278 0 18.842-3.624 25.697-10.855l83.939-83.651v200.998c0 9.89 3.567 17.936 10.706 24.126 7.139 6.184 15.752 9.273 25.837 9.273h36.545c10.089 0 18.698-3.09 25.837-9.273 7.139-6.188 10.712-14.236 10.712-24.126V198.144l83.938 83.651c6.848 7.231 15.413 10.855 25.7 10.855 10.082 0 18.747-3.624 25.975-10.855l21.409-21.409c7.043-7.426 10.567-15.988 10.567-25.693.001-9.898-3.523-18.559-10.566-25.985z"/></svg>
+                  Upload photo
+                </label>
               </div>
             </div>
           </section>
