--- a/dating/favorites.html
+++ b/dating/favorites.html
@@ -21,7 +21,7 @@
   <meta name="msapplication-config" content="browserconfig.xml">
   <meta name="theme-color" content="#7480d0">
 </head>
-<body>
+<body class="body  body--inner">
   <header class="header  header--inner">
     <div class="container">
       <nav class="nav  nav--inner">
@@ -382,13 +382,13 @@
         </div>
         <div class="girl  girl--inner">
           <h1 class="main__title">Favorites</h1>
-          <div class="girl__select">
-            <button class="girl__choice">
-              <svg class="girl__choice-icon" xmlns="http://www.w3.org/2000/svg" width="25" height="20" viewBox="0 0 433.5 433.5"><path d="M0 293.25h433.5v-51H0v51zm0 102h433.5v-51H0v51zm0-204h433.5v-51H0v51zm0-153v51h433.5v-51H0z"/></svg>
+          <div class="profile__select">
+            <button class="profile__choice">
+              <svg class="profile__choice-icon" xmlns="http://www.w3.org/2000/svg" width="25" height="20" viewBox="0 0 433.5 433.5"><path d="M0 293.25h433.5v-51H0v51zm0 102h433.5v-51H0v51zm0-204h433.5v-51H0v51zm0-153v51h433.5v-51H0z"/></svg>
               All
             </button>
-            <button class="girl__choice  girl__choice--active">
-              <svg class="girl__choice-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 438.533 438.533"><path d="M409.133 109.203c-19.608-33.592-46.205-60.189-79.798-79.796C295.736 9.801 259.058 0 219.273 0c-39.781 0-76.47 9.801-110.063 29.407-33.595 19.604-60.192 46.201-79.8 79.796C9.801 142.8 0 179.489 0 219.267c0 39.78 9.804 76.463 29.407 110.062 19.607 33.592 46.204 60.189 79.799 79.798 33.597 19.605 70.283 29.407 110.063 29.407s76.47-9.802 110.065-29.407c33.593-19.602 60.189-46.206 79.795-79.798 19.603-33.596 29.403-70.284 29.403-110.062.001-39.782-9.8-76.472-29.399-110.064z"/></svg>
+            <button class="profile__choice  profile__choice--active">
+              <svg class="profile__choice-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 438.533 438.533"><path d="M409.133 109.203c-19.608-33.592-46.205-60.189-79.798-79.796C295.736 9.801 259.058 0 219.273 0c-39.781 0-76.47 9.801-110.063 29.407-33.595 19.604-60.192 46.201-79.8 79.796C9.801 142.8 0 179.489 0 219.267c0 39.78 9.804 76.463 29.407 110.062 19.607 33.592 46.204 60.189 79.799 79.798 33.597 19.605 70.283 29.407 110.063 29.407s76.47-9.802 110.065-29.407c33.593-19.602 60.189-46.206 79.795-79.798 19.603-33.596 29.403-70.284 29.403-110.062.001-39.782-9.8-76.472-29.399-110.064z"/></svg>
               Online
             </button>
           </div>
