--- a/dating/view_profile.html
+++ b/dating/view_profile.html
@@ -464,7 +464,7 @@
                 <p class="profile__text">I just want to feel love every day and to feel that you need me too. I really hope to find a Romantic, lovely and loyal woman. this is all that I need.</p>
               </section>
             </div>
-            <!-- <section class="profile__slider">
+            <section class="profile__slider">
               <h1 class="profile__name  profile__name--photos">My photos <span class="profile__photo-counter">(18)</span></h1>
               <div class="profile__wrapper">
                 <div class="profile__photos">
@@ -492,12 +492,16 @@
                   <p class="profile__name  profile__name--small">or click</p>
                   <input class="profile__file" id="file" type="file" name="file">
                   <label class="button  button--small  button--violet  profile__file-label" for="file">
-                    <svg class="profile__file-icon" xmlns="http://www.w3.org/2000/svg" width="11" height="12" viewBox="0 0 444.819 444.819"><path fill="#FFF" d="M434.252 208.708L248.387 22.843c-7.042-7.043-15.693-10.564-25.977-10.564-10.467 0-19.036 3.521-25.697 10.564L10.848 208.708C3.615 215.94 0 224.604 0 234.692c0 9.897 3.619 18.459 10.848 25.693l21.411 21.409c6.854 7.231 15.42 10.855 25.697 10.855 10.278 0 18.842-3.624 25.697-10.855l83.939-83.651v200.998c0 9.89 3.567 17.936 10.706 24.126 7.139 6.184 15.752 9.273 25.837 9.273h36.545c10.089 0 18.698-3.09 25.837-9.273 7.139-6.188 10.712-14.236 10.712-24.126V198.144l83.938 83.651c6.848 7.231 15.413 10.855 25.7 10.855 10.082 0 18.747-3.624 25.975-10.855l21.409-21.409c7.043-7.426 10.567-15.988 10.567-25.693.001-9.898-3.523-18.559-10.566-25.985z"/></svg>
+                    <svg class="profile__file-icon" xmlns="http://www.w3.org/2000/svg" width="11" height="12" viewBox="0 0 444.819 444.819"><path d="M434.252 208.708L248.387 22.843c-7.042-7.043-15.693-10.564-25.977-10.564-10.467 0-19.036 3.521-25.697 10.564L10.848 208.708C3.615 215.94 0 224.604 0 234.692c0 9.897 3.619 18.459 10.848 25.693l21.411 21.409c6.854 7.231 15.42 10.855 25.697 10.855 10.278 0 18.842-3.624 25.697-10.855l83.939-83.651v200.998c0 9.89 3.567 17.936 10.706 24.126 7.139 6.184 15.752 9.273 25.837 9.273h36.545c10.089 0 18.698-3.09 25.837-9.273 7.139-6.188 10.712-14.236 10.712-24.126V198.144l83.938 83.651c6.848 7.231 15.413 10.855 25.7 10.855 10.082 0 18.747-3.624 25.975-10.855l21.409-21.409c7.043-7.426 10.567-15.988 10.567-25.693.001-9.898-3.523-18.559-10.566-25.985z"/></svg>
                     Upload photo
                   </label>
                 </div>
               </div>
-            </section> -->
+            </section>
+            <button class="profile__add" type="button">
+              Like
+              <svg class="profile__add-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 51.997 51.997"><path fill="#b6b7c8" d="M51.911 16.242c-.759-8.354-6.672-14.415-14.072-14.415-4.93 0-9.444 2.653-11.984 6.905-2.517-4.307-6.846-6.906-11.697-6.906C6.759 1.826.845 7.887.087 16.241c-.06.369-.306 2.311.442 5.478 1.078 4.568 3.568 8.723 7.199 12.013l18.115 16.439 18.426-16.438c3.631-3.291 6.121-7.445 7.199-12.014.748-3.166.502-5.108.443-5.477z"/></svg>
+            </button>
           </section>
         </div>
       </div>
